--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "devstart": "nodemon ./bin/www",
+    "serverstart": "members-only* npm run devstart"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
     "express": "~4.16.1",
+    "express-async-handler": "^1.2.0",
+    "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
+    "mongodb": "^2.2.12",
     "mongoose": "^7.3.1",
     "morgan": "~1.9.1",
+    "nodemon": "^2.0.22",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
